# LongPathShutil

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
LongPathShutil/: LongPathShutil.py  __init__.py
tests/: LongPathShutil_test.py  test.py
